tests/k8s_testcases/network-policy-checks-bad-path/matchexpressions_operator_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-operator-test-type
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        # wrong type
        operator:
          - NotIn
        values:
          - helm
      - key: app
        operator: Exists
      - key: tier
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
